...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="wed-bW-wH3" id="c2n-fa-Ywx"/>
                            <outlet property="delegate" destination="wed-bW-wH3" id="pHo-1N-Sa4"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Rock Tracks" id="rye-5k-ded"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="hj5-V4-Odd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1034.7826086956522" y="28.794642857142854"/>
        </scene>
        <!--Navigation Controller-->
...
                                                <color key="backgroundColor" systemColor="systemPinkColor"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="46" id="5hP-ag-rAr"/>
                                                </constraints>
                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="More details"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="5"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
...
