...
        prettifyUI()
        loadTrackInformation()
        
    }
    
    func prettifyUI() {
        navigationController?.navigationBar.topItem?.backButtonTitle = "Back"
        trackPriceLabel.textColor = UIColor.systemGray
        durationLabel.textColor = UIColor.systemGray
        releaseDateLabel.textColor = UIColor.systemGray
        songImageView.layer.cornerRadius = songImageView.frame.size.width/2
        songImageView.clipsToBounds = false
        songImageView.layer.shadowColor = UIColor.systemGray.cgColor
...
